# WebApp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/api/: main.py  settings.py
app/static/: client.js
app/static/libraries/prism/: prism.css  prism.js
app/static/styles/: base.css
app/templates/: base.html
app/templates/components/: controls.html  display.html  keybindings.html
app/templates/pages/: index.html
docs/: index.html
docs/source/: conf.py  index.rst
my_library/my_module/: __init__.py  my_functions.py
scripts/: image.py
tests/: test_import.py
tests/unit/: test_mandelbrot.py
