[tool.poetry]
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>"]
description = "An example full-stack web-application."
license = "MIT"
name = "my_library"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.0.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
